Fixed overflow

--- a/css/css-site.css
+++ b/css/css-site.css
@@ -185,6 +185,8 @@ body {
   font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande";
   -webkit-font-smoothing: antialiased;
   transition: background .15s ease-in;
+  max-width: 100%;
+    overflow-x: hidden
 }
 
 .main-title {
@@ -1231,30 +1233,17 @@ progress::-moz-progress-bar {
 }
 
 
-.hire-me .bubble {
-    transform: translate3d(0, 0, 0);
-    -webkit-transform: translate3d(0, 0, 0);
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-    background-color: #F5F7FA;
-    padding: 20px 25px 24px;
-    border-radius: 8px;
-    font-size: 1.5rem;
-    border: 1px solid #F5F7FA;
-    display: inline-block;
-    width: 100%;
-    
-}
 
 
-.hire-me .available {
+.hire-me{
     transform: translate3d(0, 0, 0);
     -webkit-transform: translate3d(0, 0, 0);
     -webkit-transition: 0.1s;
     transition: 0.1s;
     text-transform: uppercase;
-    background-color: #000;
+    
     color: white;
+    text-align: center;
     font-weight: 700;
     letter-spacing: 1px;
     padding: 5px 10px 6px;
